--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <main
    <ul>
-    <li><a href="./recipe/main.html">Recipe site</a></li>
+    <li><a href="./recipe/index.html">Recipe site</a></li>
 
    </ul> 
     </main>
