first project completed !
first html basic recipe site is completed !!!

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Projects</title>
   </head>
   <body>
-    <main
-   <ul>
-    <li><a href="./recipe/index.html">Recipe site</a></li>
-
-   </ul> 
+    <main>
+      <h2>All Projects:</h2>
+      <ul>
+        Starting projects:
+        <ul>
+          <li><a href="./recipe-project/index.html">Basic recipe site</a></li>
+        </ul>
+      </ul>
     </main>
   </body>
 </html>
